# alinet

./: .gitignore  CHANGELOG.md  README.md  analyse_dataset.ipynb  asr.py  baseline.py  chunk_filtering.py  chunk_filtering_experiments.ipynb  chunking.py  cli.py  coreference_resolution.py  eval.py  evaluation.py  filtering_experiments.ipynb  main.py  models.py  pdf2text.py  prepare_data.py  pyproject.toml  qg.py  train.py  utils.py  video_processing.py
.github/: pull_request_template.md
.github/workflows/: draft-release.yaml  publish-release.yaml
asr/: __init_.py  __init__.py  asr_pipeline.py
chromadb/: chroma.sqlite3
chunking/: README.md  __init__.py  chunks_generator.py
data/: generate_dataset.py
dataset_processing/: prepare_data.py
dependencies/: README.md
evaluation/: README.md
experiments/: README.md
experiments/compare_distribution/: compare.csv  compare_distribution.ipynb  compare_mrqa_distribution.ipynb  generate_comp_distribution.ipynb  generate_distribution.py  na_questions.ipynb
experiments/dataset/: adversarial.ipynb  distribution_dataset.ipynb  fairytale.ipynb  generate_balanced_dataset.py  inquistive.ipynb  narrative.ipynb  narrativeqa_encoding.ipynb  narrativeqa_token_length_distribution_length.ipynb  spoken-squad.ipynb  squad.ipynb
experiments/qg/: README.md  comp3074_lecture_2.pkl  eval_models.ipynb
experiments/rag/: inference_speed_experiment.ipynb
filtering/: README.md  __init__.py  filtering_pipeline.py  video_processing.py
finetune/: finetune.py  finetune_single.py  generate_dataset.py
finetune/datasets/: squad_train.csv  squad_validation.csv
question_generation/: README.md  __init__.py  models.py
rag/: embed_pmc.ipynb  eval_rag.py  generate_pmc_1mil.ipynb  generate_pubmedqa_vectordb.py  rag.py  test_output.py  vector.ipynb
results/: result-2024_01_09-23_57_23.json
scripts/: README.md  augment_dataset.py  coreference_resolution.py  create_resolved_diff.py  eval.py  eval_context_quality.py  eval_rag.py  generate_dataset.py  generate_pubmedqa_dataset.py  generate_pubmedqa_vectordb.py  models.py  prepare_data.py  run_bart_dlm_flax.py  source_vs_rag_results.py  split_dataset_categories.py  train.py  train_resolved_categories.py
server/: main.py
src/alinet/: __init__.py  main.py  model.py
src/alinet/asr/: __init__.py  model.py  pipeline.py
src/alinet/chunking/: __init__.py  model.py  pipeline.py  similarity.py  video.py
src/alinet/qg/: __init__.py  model.py  pipeline.py
src/alinet/rag/: db.py  pdf.py
src/marker/: convert.py  extract_text.py  markdown.py  ordering.py  schema.py  segmentation.py  settings.py
tests/chunking/: test_similarity.py
utility/: dataset.py
web_app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web_app/src/: App.css  App.tsx
web_app/src/components/: DragDrop.css  DragDrop.module.css  DragDrop.tsx  FileList.module.css  FileList.tsx  FilePreviewModal.tsx  GeneratedQuestions.tsx  PDFViewer.module.css  PDFViewer.tsx  QuestionTable.module.css  QuestionTable.tsx
