[tool.poetry]
name = "mmqg"
version = "0.1.0"
description = "multi-modal question generation"
authors = [
    "Omar Zeghouani <omarzeghouanii@gmail.com>",
    "Jia Wei Hong <jiaweihong1@gmail.com>",
    "William Simson van Dijkhuizen <wilvandijkhuizen@gmail.com>",
    "Zawar Ali <ali.zawar.it@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
transformers = "^4.35.2"
torch = [
    { version = "2.1.2", source = "pytorch", platform = "!=darwin"},
    { version = "2.1.2", source = "pypi", platform = "darwin"},
]
pymupdf = "^1.23.7"
pydub = "^0.25.1"
accelerate = "^0.25.0"
scikit-learn = "^1.3.2"
strenum = "^0.4.15"
spacy = "^3.7.2"
sentencepiece = "^0.1.99"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
jupyter = "^1.0.0"
evaluate = "^0.4.1"
bert-score = "^0.3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
