[tool.poetry]
name = "mmqg"
version = "0.1.1"
description = "multi-modal question generation"
authors = [
    "Omar Zeghouani <omarzeghouanii@gmail.com>",
    "Jia Wei Hong <jiaweihong1@gmail.com>",
    "William Simson van Dijkhuizen <wilvandijkhuizen@gmail.com>",
    "Zawar Ali <ali.zawar.it@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "alinet", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
transformers = "^4.35.2"
torch = [
  { url = "https://download.pytorch.org/whl/cu118/torch-2.1.2%2Bcu118-cp310-cp310-linux_x86_64.whl", platform = "linux", python = "3.10"},
  { version = "2.1.2", source = "pypi", platform = "!=linux"}
]
pymupdf = "^1.23.7"
pydub = "^0.25.1"
accelerate = "^0.25.0"
scikit-learn = "^1.3.2"
strenum = "^0.4.15"
spacy = "^3.7.2"
sentencepiece = "^0.1.99"
datasets = "^2.16.0"
opencv-python = "^4.9.0.80"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl"}
evaluate = "^0.4.1"
bert-score = "^0.3.13"
protobuf = "^4.25.1"
pytesseract = "^0.3.10"
jiwer = "^3.0.3"
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
